Auto Calculate Button and Script added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 </article>
                 <div class="spin">
                     <button id="btn csgo-spin">Burn £2!</button>
+                    <button id="btn csgo-auto-spin">Quick calculate</button>
                 </div>
                 <section class="csgo-stats" id="play">
                     <p>Cases opened: <span id="spins"> </span></p>
