--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     </head>
     <body>
-        <main>
+        <main class="container">
             <section class="title">
                 <h1>Micro-Transaction Spending Simulator</h1>
                 <p>Don't waste your money. See the reality of Micro-Transaction spending</p>
@@ -24,16 +24,21 @@
                     <button id="btn csgo-spin">Burn £2!</button>
                     <button id="btn csgo-auto-spin">Quick calculate</button>
                 </div>
+
+                <section class="congrats-container">
+                    <p id="message"></p>
+                </section>
                 <section class="csgo-stats" id="play">
                     <p>Cases opened: <span id="spins"> </span></p>
                     <p>Money spent: £<span id="spending"></span></p>
                 </section>
+                
                 <section class="csgo-items">
-                    <p> <strong>Mil-spec</strong> (Probability: 80.4%): <span id="milSpec"></span></p>
-                    <p> <strong>Restricted</strong> (Probability: 15.6%):  <span id="restricted"></span></p>
-                    <p> <strong>Classified</strong> (Probability: 2.83%): <span id="classified"></span></p>
-                    <p> <strong>Covert</strong> (Probability: 0.83%): <span id="covert"></span></p>
-                    <p> <strong>Special Item</strong> (Probability: 0.3%): <span id="exceedinglyRare"></span></p>
+                    <p> <strong>Mil-spec</strong> (Probability: <span class="probability">80.4%</span>): <span id="milSpec"></span></p>
+                    <p> <strong>Restricted</strong> (Probability: <span class="probability">15.6%</span>):  <span id="restricted"></span></p>
+                    <p> <strong>Classified</strong> (Probability: <span class="probability">2.83%</span>): <span id="classified"></span></p>
+                    <p> <strong>Covert</strong> (Probability: <span class="probability">0.83%</span>): <span id="covert"></span></p>
+                    <p> <strong>Special Item</strong> (Probability: <span class="probability">0.3%</span>): <span id="exceedinglyRare"></span></p>
                 </section>
             </section>
         </main>
