Special Item info Added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                 <section class="congrats-container">
                     <p id="message"></p>
                 </section>
+
+                <section class="item-info">
+                    <p id="item-type"></p>
+                    <p id="skin-type"></p>
+                    <p id="quality-type"></p>
+                </section>
+
                 <section class="csgo-stats" id="play">
                     <p>Cases opened: <span id="spins"> </span></p>
                     <p>Money spent: £<span id="spending"></span></p>
@@ -45,6 +52,10 @@
                     <p> <strong>Covert</strong> (Probability: <span class="probability">0.83%</span>): <span id="covert"></span></p>
                     <p> <strong>Special Item</strong> (Probability: <span class="probability">0.3%</span>): <span id="exceedinglyRare"></span></p>
                 </section>
+
+                <footer class="version-container">
+                    Version 0.2
+                </footer>
             </section>
         </main>
     </body>
