no major changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
                 <div class="spin">
                     <button id="btn csgo-spin">Burn £2!</button>
-                    <button id="btn csgo-auto-spin">Quick calculate</button>
+                    <button id="btn csgo-auto-spin">Auto open</button>
                 </div>
 
                 <section class="congrats-container">
