--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h1>CSGO Case Simulator:</h1>
                     <p>Each press of the button is a reflection of buying a single key to open 1 CSGO case. Within each case lies a 
                         myriad of weapon skins that range in rarety and value from £0.10 to £1,000+. See how much it would cost 
-                        you to unlock some of the best and rarest items in without the financial burden.
+                        you to unlock some of the best and rarest items without the financial burden.
                     </p>
                 </article>
                 
